# src/routes/atendimentoRouter.ts
@@ -1,12 +1,18 @@
 import { Router } from "express";
 import AtendimentoController from "../controllers/atendimentoController";
+import { validateAuth,validateAuthAdm } from "../middleware/authMiddleware";
 
 const controller = new AtendimentoController();
 const router = Router();
 
-router.post("/iniciarAtendimento", (req, res) => {
+router.post("/iniciarAtendimento", validateAuth, (req, res) => {
    // #swagger.tags = ['Atendimento']
    // #swagger.summary = 'Inicia um atendimento'
+
+   /* #swagger.security = [{
+        "bearerAuth": []
+    }]
+    */
 
    /*
         #swagger.requestBody = {
@@ -23,19 +29,29 @@ router.post("/iniciarAtendimento", (req, res) => {
    controller.createAtendimento(req, res);
 });
 
-router.get("/listarAtendimentos", (req, res) => {
+router.get("/listarAtendimentos", validateAuth,(req, res) => {
    // #swagger.tags = ['Atendimento']
    // #swagger.summary = 'Lista todos os atendimentos'
+
+   /* #swagger.security = [{
+        "bearerAuth": []
+    }]
+    */
    controller.listAtendimento(req, res);
 });
 
-router.get("/buscarPorId/:id", (req, res) => {
+router.get("/buscarPorId/:id", validateAuth,(req, res) => {
    // #swagger.tags = ['Atendimento']
    // #swagger.summary = 'Busca um atendimento por ID'
+
+   /* #swagger.security = [{
+        "bearerAuth": []
+    }]
+    */
    controller.findById(req, res);
 });
 
-router.patch("/alterarStatus", (req, res) => {
+router.patch("/alterarStatus", validateAuth,(req, res) => {
    // #swagger.tags = ['Atendimento']
    // #swagger.summary = 'Altera o status de um atendimento um atendimento'
    /*
@@ -50,6 +66,11 @@ router.patch("/alterarStatus", (req, res) => {
             }
         }
    */
+
+   /* #swagger.security = [{
+        "bearerAuth": []
+    }]
+    */
    controller.changeStatus(req, res);
 });
 
