# src/routes/clienteRouter.ts
@@ -1,13 +1,17 @@
 import { Router } from "express";
 import ClienteController from "../controllers/clienteController";
+import { validateAuth, validateAuthAdm } from "../middleware/authMiddleware";
 
 const controller = new ClienteController();
 const router = Router();
 
-router.post("/cadastrarCliente", (req, res) => {
+router.post("/cadastrarCliente", validateAuthAdm, (req, res) => {
    // #swagger.tags = ['Cliente']
    // #swagger.summary = 'Cadastra um cliente'
-
+   /* #swagger.security = [{
+        "bearerAuth": []
+    }]
+    */
    /*
         #swagger.requestBody = {
             required: true,
@@ -24,14 +28,17 @@ router.post("/cadastrarCliente", (req, res) => {
    controller.createCliente(req, res);
 });
 
-router.get("/listarClientes", (req, res) => {
+router.get("/listarClientes", validateAuthAdm, (req, res) => {
    // #swagger.tags = ['Cliente']
    // #swagger.summary = 'Lista todos os clientes'
-
+   /* #swagger.security = [{
+        "bearerAuth": []
+    }]
+    */
    controller.listClients(req, res);
 });
 
-router.get("/buscarPorId/:id", (req, res) => {
+router.get("/buscarPorId/:id", validateAuthAdm,(req, res) => {
    // #swagger.tags = ['Cliente']
    // #swagger.summary = 'Busca um cliente por seu ID'
 
@@ -41,11 +48,14 @@ router.get("/buscarPorId/:id", (req, res) => {
 router.get("/buscarPorEmail/:email", (req, res) => {
    // #swagger.tags = ['Cliente']
    // #swagger.summary = 'Busca um cliente por seu E-mail'
-
+   /* #swagger.security = [{
+        "bearerAuth": []
+    }]
+    */
    controller.findByEmail(req, res);
 });
 
-router.put("/alterarCliente", (req, res) => {
+router.put("/alterarCliente", validateAuthAdm,(req, res) => {
    // #swagger.tags = ['Cliente']
    // #swagger.summary = 'Altera um cliente'
 
@@ -67,9 +77,11 @@ router.put("/alterarCliente", (req, res) => {
 router.delete("/deletarCliente/:id", (req, res) => {
    // #swagger.tags = ['Cliente']
    // #swagger.summary = 'Deleta um cliente'
-
+   /* #swagger.security = [{
+        "bearerAuth": []
+    }]
+    */
    controller.deleteClient(req, res);
 });
-
 
 export default router;
