# src/routes/petRouter.ts
@@ -1,13 +1,17 @@
 import { Router } from "express";
 import PetController from "../controllers/petController";
+import { validateAuth, validateAuthAdm } from "../middleware/authMiddleware";
 
 const router = Router();
 const controller = new PetController();
 
-router.post("/cadastrarPet", (req, res) => {
+router.post("/cadastrarPet", validateAuth, (req, res) => {
    // #swagger.tags = ['Pet']
    // #swagger.summary = 'Cadastra um pet'
-
+   /* #swagger.security = [{
+        "bearerAuth": []
+    }]
+    */
    /*
         #swagger.requestBody = {
             required: true,
@@ -23,44 +27,62 @@ router.post("/cadastrarPet", (req, res) => {
    controller.createPet(req, res);
 });
 
-router.get("/listarPets", (req, res) => {
+router.get("/listarPets", validateAuthAdm, (req, res) => {
    // #swagger.tags = ['Pet']
    // #swagger.summary = 'Lista todos os pets'
-
+   /* #swagger.security = [{
+        "bearerAuth": []
+    }]
+    */
    controller.listPets(req, res);
 });
-router.get("/buscarPorId/:id", (req, res) => {
+router.get("/buscarPorId/:id", validateAuthAdm, (req, res) => {
    // #swagger.tags = ['Pet']
    // #swagger.summary = 'Lista um pet por seu id'
-
+   /* #swagger.security = [{
+        "bearerAuth": []
+    }]
+    */
    controller.findById(req, res);
 });
 
-router.get("/buscarPorIdRaca/:id", (req, res) => {
+router.get("/buscarPorIdRaca/:id", validateAuthAdm, (req, res) => {
    // #swagger.tags = ['Pet']
    // #swagger.summary = 'Lista um pet por seu id de raça'
-
+   /* #swagger.security = [{
+        "bearerAuth": []
+    }]
+    */
    controller.findByRaca(req, res);
 });
 
-router.get("/buscarPorIdEspecie/:id", (req, res) => {
+router.get("/buscarPorIdEspecie/:id", validateAuthAdm, (req, res) => {
    // #swagger.tags = ['Pet']
    // #swagger.summary = 'Lista um pet por seu id de especie'
-
+   /* #swagger.security = [{
+        "bearerAuth": []
+    }]
+    */
    controller.findByEspecie(req, res);
 });
 
-router.get("/buscarPorIdCliente/:id", (req, res) => {
+router.get("/buscarPorIdCliente/:id", validateAuthAdm, (req, res) => {
    // #swagger.tags = ['Pet']
    // #swagger.summary = 'Lista um pet por seu id de cliente'
-
+   /* #swagger.security = [{
+        "bearerAuth": []
+    }]
+    */
    controller.findByClient(req, res);
 });
 
-router.put("/alterarPet", (req, res) => {
+router.put("/alterarPet", validateAuthAdm,(req, res) => {
    // #swagger.tags = ['Pet']
    // #swagger.summary = 'Altera um pet'
-
+   /* #swagger.security = [{
+        "bearerAuth": []
+    }]
+    */
    /*
         #swagger.requestBody = {
             required: true,
@@ -77,9 +99,13 @@ router.put("/alterarPet", (req, res) => {
    controller.updatePet(req, res);
 });
 
-router.delete("/deletarPet/:id", (req, res) => {
+router.delete("/deletarPet/:id", validateAuthAdm, (req, res) => {
    // #swagger.tags = ['Pet']
    // #swagger.summary = 'Deleta um pet'
+   /* #swagger.security = [{
+        "bearerAuth": []
+    }]
+    */
    controller.deletePet(req, res);
 });
 
